
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#d2be85" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="WATTHAI"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                android:typeface="sans" />

            <ImageButton
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:drawable/ic_menu_revert" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#d2be45" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="จุดเริ่มต้น"
                android:textSize="30dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Lat"
            android:id="@+id/textView"
            android:textColor="@color/black"
            android:textSize="@dimen/h2"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView2"
            android:textSize="@dimen/h2"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_weight="1.5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Lng"
            android:id="@+id/textView3"
            android:textColor="@color/black"
            android:textSize="@dimen/h2"
            android:textStyle="bold"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView4"
            android:textColor="@color/black"
            android:textSize="@dimen/h2"
            android:textStyle="bold"
            android:layout_weight="1.5" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">
        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#d2be45" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ปลายทาง"
                android:textSize="30dp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        style="@android:style/Widget.Spinner" />
</RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="310dp">
        <fragment
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/map"
            tools:context=".MapsActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignWithParentIfMissing="true"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

        </LinearLayout>

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/Bzoomin"
            android:src="@android:drawable/arrow_up_float"
            android:layout_gravity="center_vertical"
            android:onClick="onZoom"
            android:enabled="true"
            android:layout_marginTop="180dp"
            android:contentDescription="@string/on"
            android:layout_below="@+id/linearLayout"
            android:layout_alignStart="@+id/Bzoomout"
            />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:id="@+id/Bzoomout"
            android:src="@android:drawable/arrow_down_float"
            android:layout_gravity="center_vertical"
            android:onClick="onZoom"
            android:enabled="true"
            android:contentDescription="@string/drop"
            android:layout_below="@+id/Bzoomin"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/maptype"
            android:id="@+id/Btype"
            android:layout_gravity="center_horizontal"
            android:nestedScrollingEnabled="false"
            android:onClick="changeType" />
        <Button
            android:id="@+id/btn_startsearch"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="START"
            android:textColor="@color/black"
            android:onClick="clickStartSearchAct" />
    </LinearLayout>
</LinearLayout>
